--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,6 +19,7 @@
 }
 body {
   margin: 0;
+  padding: 0;
 }
 .navbar {
   display: flex;
@@ -46,12 +47,13 @@ body {
 }
 
 .svg-background {
-  width: 100%;
+  min-width: 100%;
   height: 100%; /* Adjust height as needed */
   background-image: url("./assets/Background.svg");
-  background-size: cover; /* Or contain, depending on how you want the SVG to scale */
+  background-size: auto; /* Or contain, depending on how you want the SVG to scale */
   background-repeat: no-repeat;
   /* Other background properties like position, etc. can be adjusted here */
+  background-position: 5%;
 }
 
 .nav-link {
