--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,3 +63,19 @@ body {
 .nav-link.active {
   color: rgba(234, 240, 246, 0.9);
 }
+
+.bg-translucent-bottom {
+  background: linear-gradient(
+    to bottom,
+    rgba(18, 35, 55, 1),
+    rgba(255, 255, 255, 0.1)
+  );
+}
+
+.bg-translucent-top {
+  background: linear-gradient(
+    to top,
+    rgba(18, 35, 55, 1),
+    rgba(255, 255, 255, 0.1)
+  );
+}
