--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,7 +25,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
+  background-color: #0B1B2D;
   color: #fff;
   padding: 10px 20px;
 }
@@ -55,7 +55,9 @@ body {
   /* Other background properties like position, etc. can be adjusted here */
   background-position: 5%;
 }
-
+.gradient {
+  background-image: linear-gradient(180deg, #0B1B2D, #0D1224)
+}
 .nav-link {
   color: rgba(234, 240, 246, 0.3);
 }
