--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,7 +53,8 @@ body {
   background-size: cover; /* Or contain, depending on how you want the SVG to scale */
   background-repeat: no-repeat;
   /* Other background properties like position, etc. can be adjusted here */
-  background-position: 5%;
+  background-position: 2%;
+  background-color: #0D1224;
 }
 .gradient {
   background-image: linear-gradient(180deg, #0b1b2d, #0d1224);
